# mgen

./: .gitignore  CHANGELOG.md  README.md  ex1.mgen  ex2.mgen  ex3.mgen  ex4.mgen  mgen.cabal
Src/: Description.hs  Dimension.hs  Dimensions.hs  Expression.hs  Main.hs  Matlab.hs  Optimise.hs  Output.hs  Parser.hs  Python.hs  Translate.hs  TranslateContext.hs  Utils.hs
examples/: README.md  common.ipynb  common.m  common.mgen  common.py  ex1.mgen  ex3.mgen  ex4.in  ex4.mgen  heterogenous.mgen  minimal.mgen  nesting.mgen
